tests/ui/lowering/expr-in-pat-issue-99380.stderr
error: expected pattern, found expression `Some(3)`
  --> $DIR/expr-in-pat-issue-99380.rs:3:16
   |
LL |         if let $p = Some(42) {
   |                ^^ expected pattern
...
LL |     foo!(Some(3));
   |     ------------- in this macro invocation
   |
   = note: this error originates in the macro `foo` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

